--- a/childhood.html
+++ b/childhood.html
@@ -181,26 +181,32 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
                              ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
 `;
 
-    const staticHome = `
-                                                  {}
-                                                 oIIo
-                                                 oIIo
-                     []=++-                       ||
-                    _II__|                        ||       I.
-                   [[__] |                        ||       |:
-    _________________||  |___                    _||_      |:
-   /^^^^^^,-.^^^^^^^^\|__|^^^\                 .' || `.    |:
-  /     ,',-.`.               \               /   ||   \   |:
- /    ,','   `.`.     ,-"""-.  \             |    ::    |  |:
-/___,','__   __`.`.__/_,"T"._\__\            )_   ::   _(  |:
-|='-'||/\| |^^||`-`=|_|_|_|_|=|               _)( :: )(_   |:
-|= = ||)(| |__||= ==|_|_|_|_|=|              ) ._)::(_. (  |:
-|= ==|"""" """"| = =____= =_==|             /     II     \ |:
-|== =| __   __ |= =| [] | |^|=|             |  .-.||     | |:
-|= ==||/\| |==||== |   o|=|_| |              \(___)(    /  |:
-|== =||)(| |  || = | == | == =|               `.__\/__.'   I'
-|= ==|"""" """"|== |____|= = =|
-"""""|_________|"""'====`""""""                   
+    const staticHome = `                                    ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
+                                    ╵             {}                                                              ╵
+                                    ╵            oIIo                                                             ╵
+                                    ╵            oIIo                                                             ╵
+                     []=++-         ╵             ||                                                              ╵
+                     II___|         ╵             ||       I.                                                     ╵
+                     ||  |          ╵             ||       |:                                                     ╵
+    _________________||  |___       ╵            _||_      |:                                                     ╵
+   /^^^^^^,-.^^^^^^^^\\|__|^^^\\      ╵          .' || \`.    |:      ____________________________________           ╵
+  /     ,',-.\`.               \\     ╵         /   ||   \\   |:     |\\                                    \\         ╵
+ /    ,','   \`.\`.     ,-"""-.  \\    ╵        |    ::    |  |:     | \\                                    \\        ╵
+/___,','__   __\`.\`.__/_,"T"._\\__\\   ╵        )_   ::   _(  |:     |  \\____________________________________\\       ╵
+|='-'||/\\| |^^||\`-\`=|_|_|_|_|=|     ╵         _)( :: )(_   |:     |  |             _---_ _---__           |       ╵
+|= = ||)(| |__||= ==|_|_|_|_|=|     ╵        ) ._)::(_. (  |:     |  |            |=====|=====|           |       ╵
+|= ==|"""" """"| = =____= =_==|    <        /     II     \\ |:     |  |            |=====|=====|           |       ╵
+|== =| __   __ |= =| [] | |^|=|     ╵       |  .-.||     | |:     |  |  __________|_---_|_---_|_________  |       ╵
+|= ==||/\\| |==||== |   o|=|_| |     ╵        \\(___)(    /  |:     |  |  ________________________________  |       ╵
+|== =||)(| |  || = | == | == =|     ╵         \`.__\\/__.'   I'     |   \\ \\________________________________\\ \\      ╵
+|= ==|"""" """"|== |____|= = =|     ╵                             |  , | |\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\| |     ╵
+"""""|_________|"""'====\`""""""     ╵                             |  |\\  ,--------------------------------, |     ╵
+                                    ╵                             |  ||| |                               || |     ╵
+                                    ╵                              \\ ||| |            _  _  _            || |     ╵
+                                    ╵                               \\||| |------------\\\\-\\\\-\\\\-----------|| |     ╵
+                                    ╵                                 \\|_|                               \\|_|     ╵
+                                    ╵                                                                             ╵
+                                    ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
 `;
 
     if (!walking) {
