--- a/letters.html
+++ b/letters.html
@@ -254,3 +254,29 @@ emojis and the history of emojis, expressing feelings without words and originat
 \,.__ \ /     /     | |
 '.  \ Y    .'      |_|
  '--'----'          |
+
+ const staticHome = `               ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
+                                    ╵             {}                                                              ╵
+                                    ╵            oIIo                                                             ╵
+                                    ╵            oIIo                                                             ╵
+                     []=++-         ╵             ||                                                              ╵
+                    _II__|          ╵             ||       I.                                                     ╵
+                   [[__] |          ╵             ||       |:                                                     ╵
+    _________________||  |___       ╵            _||_      |:                                                     ╵
+   /^^^^^^,-.^^^^^^^^\|__|^^^\      ╵          .' || `.    |:      ____________________________________           ╵
+  /     ,',-.`.               \     ╵         /   ||   \   |:     |\                                    \         ╵                                  \
+ /    ,','   `.`.     ,-"""-.  \    ╵        |    ::    |  |:     | \                                    \        ╵
+/___,','__   __`.`.__/_,"T"._\__\   ╵        )_   ::   _(  |:     |  \____________________________________\       ╵
+|='-'||/\| |^^||`-`=|_|_|_|_|=|     ╵         _)( :: )(_   |:     |  |             _---_ _---__           |       ╵
+|= = ||)(| |__||= ==|_|_|_|_|=|     ╵        ) ._)::(_. (  |:     |  |            |=====|=====|           |       ╵
+|= ==|"""" """"| = =____= =_==|    <        /     II     \ |:     |  |            |=====|=====|           |       ╵
+|== =| __   __ |= =| [] | |^|=|     ╵       |  .-.||     | |:     |  |  __________|_---_|_---_|_________  |       ╵
+|= ==||/\| |==||== |   o|=|_| |     ╵        \(___)(    /  |:     |  |  ________________________________  |       ╵
+|== =||)(| |  || = | == | == =|     ╵         `.__\/__.'   I'     |   \ \________________________________\ \      ╵
+|= ==|"""" """"|== |____|= = =|     ╵                             |  , | |\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\| |     ╵
+"""""|_________|"""'====`""""""     ╵                             |  |\  ,--------------------------------, |     ╵
+                                    ╵                             |  ||| |                               || |     ╵
+                                    ╵                              \ ||| |            _  _  _            || |     ╵
+                                    ╵                               \||| |------------\\-\\-\\-----------|| |     ╵
+                                    ╵                                 \|_|                               \|_|     ╵
+                                    ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
