--- a/childhood.html
+++ b/childhood.html
@@ -171,7 +171,7 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
                              ╵                   (_\\ /_)                     ╵
                              ╵     . -౨ৎ.         .-'-.                      ╵
                              ╵    // ^ \\\\      __/(   )\\\\                    ╵
-                             ╵   ()\\   /()     --  )=( //                    ╵
+                             ╵   ()\\   /()     --/ )=( //                    ╵
                              ╵     .-'-.          /   \\                      ╵
                              ╵    //   \\\\         |   |                      ╵
                              ╵    '|___|'         |___|                      ╵
@@ -181,32 +181,47 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
                              ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
 `;
 
-    const staticHome = `                                    ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
-                                    ╵             {}                                                              ╵
-                                    ╵            oIIo                                                             ╵
-                                    ╵            oIIo                                                             ╵
-                     []=++-         ╵             ||                                                              ╵
-                     II___|         ╵             ||       I.                                                     ╵
-                     ||  |          ╵             ||       |:                                                     ╵
-    _________________||  |___       ╵            _||_      |:                                                     ╵
-   /^^^^^^,-.^^^^^^^^\\|__|^^^\\      ╵          .' || \`.    |:      ____________________________________           ╵
-  /     ,',-.\`.               \\     ╵         /   ||   \\   |:     |\\                                    \\         ╵
- /    ,','   \`.\`.     ,-"""-.  \\    ╵        |    ::    |  |:     | \\                                    \\        ╵
-/___,','__   __\`.\`.__/_,"T"._\\__\\   ╵        )_   ::   _(  |:     |  \\____________________________________\\       ╵
-|='-'||/\\| |^^||\`-\`=|_|_|_|_|=|     ╵         _)( :: )(_   |:     |  |             _---_ _---__           |       ╵
-|= = ||)(| |__||= ==|_|_|_|_|=|     ╵        ) ._)::(_. (  |:     |  |            |=====|=====|           |       ╵
-|= ==|"""" """"| = =____= =_==|    <        /     II     \\ |:     |  |            |=====|=====|           |       ╵
-|== =| __   __ |= =| [] | |^|=|     ╵       |  .-.||     | |:     |  |  __________|_---_|_---_|_________  |       ╵
-|= ==||/\\| |==||== |   o|=|_| |     ╵        \\(___)(    /  |:     |  |  ________________________________  |       ╵
-|== =||)(| |  || = | == | == =|     ╵         \`.__\\/__.'   I'     |   \\ \\________________________________\\ \\      ╵
-|= ==|"""" """"|== |____|= = =|     ╵                             |  , | |\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\| |     ╵
-"""""|_________|"""'====\`""""""     ╵                             |  |\\  ,--------------------------------, |     ╵
-                                    ╵                             |  ||| |                               || |     ╵
-                                    ╵                              \\ ||| |            _  _  _            || |     ╵
-                                    ╵                               \\||| |------------\\\\-\\\\-\\\\-----------|| |     ╵
-                                    ╵                                 \\|_|                               \\|_|     ╵
-                                    ╵                                                                             ╵
-                                    ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
+    const staticHome = `                                                  ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
+                                                  ╵                                                                             ╵
+                                                  ╵             {}       I.                                                     ╵
+                                                  ╵            oIIo      |:                                                     ╵
+                                                  ╵            oIIo      |:                                                     ╵
+                                   []=++-         ╵             ||       |:                                                     ╵
+                                   II___|         ╵             ||       |:                                                     ╵
+                                   ||  |          ╵             ||       |:                                                     ╵
+                  _________________||  |___       ╵            _||_      |:                                                     ╵
+                 /^^^^^^,-.^^^^^^^^\\|__|^^^\\      ╵          .' || \`.    |:      ____________________________________           ╵
+                /     ,',-.\`.               \\     ╵         /   ||   \\   |:     |\\                                    \\         ╵
+               /    ,','   \`.\`.     ,-"""-.  \\    ╵        |    ::    |  |:     | \\                                    \\        ╵
+              /___,','__   __\`.\`.__/_,"T"._\\__\\   ╵        )_   ::   _(  |:     |  \\____________________________________\\       ╵
+              |='-'||/\\| |^^||\`-\`=|_|_|_|_|=|     ╵         _)( :: )(_   |:     |  |             _---_ _---__           |       ╵
+              |= = ||)(| |__||= ==|_|_|_|_|=|     ╵        ) ._)::(_. (  |:     |  |            |=====|=====|           |       ╵
+              |= ==|"""" """"| = =____= =_==|    <        /     II     \\ |:     |  |            |=====|=====|           |       ╵
+              |== =| __   __ |= =| [] | |^|=|     ╵       |  .-.||     | |:     |  |  __________|_---_|_---_|_________  |       ╵
+              |= ==||/\\| |==||== |   o|=|_| |     ╵        \\(___)(    /  |:     |  |  ________________________________  |       ╵
+              |== =||)(| |  || = | == | == =|     ╵         \`.__\\/__.'   I'     |   \\ \\________________________________\\ \\      ╵
+              |= ==|"""" """"|== |____|= = =|     ╵                             |  , | |\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\| |     ╵
+              """""|_________|"""'====\`""""""     ╵                             |  |\\  ,--------------------------------, |     ╵
+                                                  ╵                             |  ||| |                               || |     ╵
+                                                  ╵                              \\ ||| |            _  _  _            || |     ╵
+╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶^╶╶╶╶╶╶╶╶╶╶╶╶╮   ╵                               \\||| |------------\\\\-\\\\-\\\\-----------|| |     ╵
+╵                                             ╵   ╵                                 \\|_|                               \\|_|     ╵
+╵                            ╭──────────────╮ ╵   ╵                                                                             ╵
+╵                            │ You must be  │ ╵   ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
+╵                            │ good at math,╰────────────────────────────────────────────────────────────────────────────────────────────╮
+╵                     .-.    │ perfect your violin and piano, never talk back, always work harder than anyone else, get a stable job     │
+╵                    /   \\   │ like a doctor or lawyer, always get 100%'s and A's, stand up straight at all times, walk like a proper    │
+╵                    \\   /   < lady, sit properly and never slouch, speak softly and respectfully, smile more but not too much, no       │
+╵     . -౨ৎ.         .-'-.   │ tatoos, no piercings, no dyed hair, nothing permanently done to your body, never argue, always obey,      │
+╵    // ^ \\\\      __/| V |\\\\ │ never lose face, never pursue things like philosophy or art, your elders know best, you should be         │
+╵   ()\\   /()     --'|   |// │ grateful, we didn't have these opportunities growing up, you don't understand how easy you have it...     │
+╵     .-'-.          |___|   ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────╯
+╵    //   \\\\         | | |                    ╵
+╵    '|___|'         | | |                    ╵
+╵      | |           |_!_|                    ╵
+╵      . .            | |                     ╵
+╵                                             ╵
+╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
 `;
 
     if (!walking) {
