--- a/letters.html
+++ b/letters.html
@@ -224,10 +224,10 @@ emojis and the history of emojis, expressing feelings without words and originat
    O
 
    . -౨ৎ.
-  // ^ \\\\
- ()\\   /()
+  // ^ \\
+ ()\   /()
    .-'-.
-  //   \\\\
+  //   \\
   '|___|'
     | |
     . .
@@ -297,3 +297,32 @@ emojis and the history of emojis, expressing feelings without words and originat
                   '|_|_|                     | | |'
                     | |                      |_|_|
                     . .                       . .
+
+  ╭───────────────╮
+  │   Wanna go    │ The "Popular Girls"                     The "Nerds"
+  │   shopping    │                                     (The Overachievers)
+  │ after school? │   ╭─────────────╮                    . - .         . - .
+  ╰────────────,──╯   │  Heck yeah! │                   // ^ \\       (/ ^ \)
+              . - .   ╰─,────,──────╯                   (\   /) . - .  \   /
+             // ^ \\. - . . - .                          .-'-. //   \\ .-'-.
+            ( \    // ^ \// ^ \\                        /|___|(_\   /_)|___|\
+            / .-'-(_\   (_\   /_)                       '| | |' .-'-. '| | |'
+           ( /|___| .-'-. .-'-.                          |_|_| /|___|\ |_|_|
+             '/___\//___\/|___|\                          . .   | | |  . .
+               | | '|_|_|'/   \                                 |_|_|
+               . .   | |  |___|             . -౨ৎ.               . .
+                     . .   . .             // ^ \\
+                                          ()\   /()
+                                            .-'-.
+  Varsity Football Team                    //   \\                     The Theater Kids
+      (The Jocks)                          '|___|'                                 . - .
+   .-.             .-.                       | |                       . - .      //   \\
+  / ^ \.-.     .-./ ^ \                      . .                      // ^ \\    ( \   '\)
+  \   / ^ \.-./ ^ \   /                                              (_\   / / ^ \ .-'-./\
+  .-'-\   / ^ \   /-'-.                                                .-'-. \   / |___|
+ /|___.-'-\   /-'-.___|\                                              //___\,.-'-.,/___\
+ '| |/|___.-'-.___|\|_|'                                               |_|_|\|___|/ | |
+  |_|'|_|/|___|\| |' |                                                  | |  | | |  . .
+   . . | '| | |'|_|. .                                                  . .  |_|_|
+       . .|_|_|. .                                                            . .
+           . .
