--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
   <div id="container">
     <div id="container">
-      <pre class="pointer asciiAlign" onclick="goToMonitor()">
+      <pre class="pointer asciiAlign" onclick="goToExperience()">
 ╭────── ˚₊‧꒰ა ☆ ໒꒱‧₊˚ ──────┒
 │                          ┃
 │        Experience        ┃
@@ -21,7 +21,7 @@
       <pre class="pointer asciiAlign">
 ╭─ 𖤐𓈒࣪ ˖ ───────────────────┒
 │                          ┃
-│          History         ┃
+│       My Childhood       ┃
 │                          ┃
 ┕━━━━━━━━━━━━━━━━━━━━━━━━━━┛
       </pre>
@@ -46,8 +46,8 @@
     </div>
   </div>
   <script>
-    function goToMonitor() {
-      window.location.href = 'monitor1.html';
+    function goToExperience() {
+      window.location.href = 'experience.html';
     }
   </script>
 </body>
