--- a/experience.html
+++ b/experience.html
@@ -10,11 +10,11 @@
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
-╭──────────────────╮
-│ Monday │ 6:20 AM │
-╰──────────────────╯
+╔══════════════════╗
+║ Monday │ 6:20 AM ║
+╚══════════════════╝
       </pre>
-      <pre class="pointer asciiAlign"><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <pre class="asciiAlign"><br><br><br><br><br><br><br><br><br><br><br><br><br>
       _      ()              ()      _
      / \     ||______________||     / \
     /___\    |                |    /___\
@@ -49,6 +49,35 @@ o(=(=(=(=)=)=)=)o
  !!!=========!!!
 _!!!_________!!!__<br>
   </pre>
+  <div id="container">
+    <div class="dialogue-box" id="container">
+      <pre class="asciiAlign">╭─────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────┒
+│                             ┃
+│  *Your alarm is going off.* ┃
+│                             ┃
+│  What would you like to do? ┃
+│                             ┃
+│                             ┃
+│                             ┃
+│                             ┃</pre>
+      <pre class="pointer asciiAlign">
+│                             ┃
+│  A. Turn it off and get up  ┃
+│                             ┃</pre>
+      <pre class="pointer asciiAlign">
+│                             ┃
+│  B. Turn it off and         ┃
+│     continue sleeping       ┃</pre>
+      <pre class="pointer asciiAlign">
+│                             ┃
+│  C. Sleep through it        ┃
+│                             ┃</pre>
+      <pre class="asciiAlign">
+│                             ┃
+┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+      </pre>
+    </div>
+  </div>
   <script>
   function goToExperience() {
     window.location.href = 'experience.html';
@@ -71,9 +100,9 @@ _!!!_________!!!__<br>
       }
     }
 
-    let timeString = `│ Monday │ ${hours}:${minutes.toString().padStart(2, '0')} ${period} │`;
+    let timeString = `║ Monday │ ${hours}:${minutes.toString().padStart(2, '0')} ${period} ║`;
 
-    document.getElementById("clock").innerHTML = `╭──────────────────╮\n${timeString}\n╰──────────────────╯
+    document.getElementById("clock").innerHTML = `╔══════════════════╗\n${timeString}\n╚══════════════════╝
 
 
     `;}
