--- a/experience.html
+++ b/experience.html
@@ -145,29 +145,29 @@ _!!!_________!!!__
 
     function replaceAsciiArt() {
       document.getElementById("ascii-door").innerHTML = `<br><br><br><br><br><br>
-       __________
-      |\\         |
-      | \\        |
-      |  \\       |
-      |   \\      |
-      |    \\     |
-      |     |    |
-      |     |    |
-      |     |    |
-      |     |    |
-      |     |    |
-      |     |    |
-      |     |    |
-    __|     |____|
-       \\    |
-        \\   |
-         \\  |
-          \\ |
-           \\|
+   __________
+  |\\         |
+  | \\        |
+  |  \\       |
+  |   \\      |
+  |    \\     |
+  |     |    |
+  |     | .-.|
+  |     |/   \\
+  |     |\\   /
+  |     |.-'-.
+  |     || V |\\\\
+  |     ||   |//
+__|     ||___|
+   \\    || | |
+    \\   || | |
+     \\  ||_!_|
+      \\ | ╚ ╚
+       \\|
       `;
     }
 
     setInterval(updateClock, 50); // 1000 is normal, adjust to speed
   </script>
   </body>
-</html>=
+</html>
